--- a/king2.html
+++ b/king2.html
@@ -2,7 +2,7 @@
 <head>
 <title>MedBuddy</title>
 </head>
-<frameset rows='11%, *'>
+<frameset rows='11%, *' border='0'>
 <frame src='navbaruser.php' name='nav'>
 <frame src='./home/home.html' name='content'>
 </frameset>
